2019-04-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* sdas/linksrc/lkrloc3.c:
	  Linker warning improvement, patch by Nicolas Lesser.
	* support/regression/tests/*.c:
	  Disable some tests for pdk15, on which they won't work anytime soon.
	* src/pdk/gen.c:
	  Fix wide left shift by large literal.

2019-04-08 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/*.c:
	  Disable some tests for pdk15, on which they won't work anytime soon.
	* sdas/linksrc/aslink.h,
	  sdas/linksrc/lkmain.c,
	  sdas/linksrc/lkrloc3.c:
	  Linker memory size warning fixes, patches by Nicolas Lesser.
	* src/pdk/ralloc.c:
	  Fix handling of shift result assigned to sfr.

2019-04-06 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/aspdk13/pdk13pst.c,
	  sdas/aspdk13/pdk13mch.c:
	  Assembler fixes.

2019-04-05 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/aspdk13/pdk13pst.c,
	  sdas/aspdk13/pdk13mch.c:
	  Assembler fixes.

2019-04-05 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* sdas/aspdk13/pdk13mch.c,
	  sdas/aspdk13/pdk13pst.c:
	  Assembler fix, patch by Leo.
	* sim/ucsim/pdk.src/pdk.cc:
	  Simulator fix, patch by Nicolas Lesser.

2019-04-05 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* .version,
	  doc/INSTALL.txt,
	  sdcc.spec:
	  Bump version in preparation of 3.9.0 release.

2019-04-05 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/*:
	  Disable some tests for pdk15, on which they won't work anytime soon.
	* sdas/aspdk15/pdk15mch.c
	  Assembler fix, patch by Nicolas Lesser.
	* sim/ucsim/pdk.src/inst.cc,
	  sim/ucsim/pdk.src/pdk.cc,
	  sim/ucsim/pdk.src/regspdk.h:
	  Simulator fix, patch by Nicolas Lesser.
	* sdas/aspdk13/pdk13mch.c:
	  Assembler fix, patch by Leo.

2019-04-05 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  support/regression/tests/bug-2274.c: