@@ -43,6 +43,106 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA
 
 /*  uint  code, mask;  char  branch;  uchar length;  char  *mnemonic; */
 
+struct dis_entry disass_pdk_13[]= {
+  { 0x0000, ~0x0000, ' ', 2, "nop" },
+  { 0x003A, ~0x0000, ' ', 2, "ret" },
+  { 0x0100, ~0x00FF, ' ', 2, "ret %k" },
+  { 0x003B, ~0x0000, ' ', 2, "reti" },
+  { 0x1700, ~0x00FF, ' ', 2, "mov a, %k" },
+  { 0x0080, ~0x001F, ' ', 2, "mov %i, a" },
+  { 0x00A0, ~0x001F, ' ', 2, "mov a, %i" },
+  { 0x05C0, ~0x003F, ' ', 2, "mov %m, a" },
+  { 0x07C0, ~0x003F, ' ', 2, "mov a, %m" },
+  { 0x00C1, ~0x001E, ' ', 2, "ldt16 %m" },
+  { 0x00C0, ~0x001E, ' ', 2, "stt16 %m" },
+  { 0x00E1, ~0x001E, ' ', 2, "idxm a, %m" },
+  { 0x00E0, ~0x001E, ' ', 2, "idxm %m, a" },
+  { 0x09C0, ~0x003F, ' ', 2, "xch %m" },
+  { 0x0032, ~0x0000, ' ', 2, "push af" },
+  { 0x0033, ~0x0000, ' ', 2, "pop af" },
+
+  { 0x1000, ~0x00FF, ' ', 2, "add %k" },
+  { 0x0400, ~0x003F, ' ', 2, "add %m, a" },
+  { 0x0600, ~0x003F, ' ', 2, "add a, %m" },
+  { 0x1100, ~0x00FF, ' ', 2, "sub %k" },
+  { 0x0440, ~0x003F, ' ', 2, "sub %m, a" },
+  { 0x0640, ~0x003F, ' ', 2, "sub a, %m" },
+  { 0x0010, ~0x0000, ' ', 2, "addc" },
+  { 0x0480, ~0x003F, ' ', 2, "addc %m, a" },
+  { 0x0680, ~0x003F, ' ', 2, "addc a, %m" },
+  { 0x0800, ~0x003F, ' ', 2, "addc %m" },
+  { 0x0011, ~0x0000, ' ', 2, "subc" },
+  { 0x04C0, ~0x003F, ' ', 2, "subc %m, a" },
+  { 0x06C0, ~0x003F, ' ', 2, "subc a, %m" },
+  { 0x0840, ~0x007F, ' ', 2, "subc %m" },
+
+  { 0x0900, ~0x003F, ' ', 2, "inc %m" },
+  { 0x0940, ~0x003F, ' ', 2, "dec %m" },
+  { 0x0980, ~0x003F, ' ', 2, "clear %m" },
+  { 0x001A, ~0x0000, ' ', 2, "sr" },
+  { 0x0A80, ~0x003F, ' ', 2, "sr %m" },
+  { 0x001B, ~0x0000, ' ', 2, "sl" },
+  { 0x0AC0, ~0x003F, ' ', 2, "sl %m" },
+  { 0x001C, ~0x0000, ' ', 2, "src" },
+  { 0x0B00, ~0x003F, ' ', 2, "src %m"},
+  { 0x001D, ~0x0000, ' ', 2, "slc" },
+  { 0x0B40, ~0x003F, ' ', 2, "slc %m" },
+
+  { 0x1400, ~0x00FF, ' ', 2, "and %k" },
+  { 0x0500, ~0x003F, ' ', 2, "and %m, a" },
+  { 0x0700, ~0x003F, ' ', 2, "and a, %m" },
+  { 0x1500, ~0x00FF, ' ', 2, "or %k" },
+  { 0x0540, ~0x003F, ' ', 2, "or %m, a" },
+  { 0x0740, ~0x003F, ' ', 2, "or a, %m" },
+  { 0x1600, ~0x00FF, ' ', 2, "xor %k" },
+  { 0x0580, ~0x003F, ' ', 2, "xor %m, a" },
+  { 0x0780, ~0x003F, ' ', 2, "xor a, %m" },
+  { 0x0060, ~0x001F, ' ', 2, "xor %i, a" },
+
+  { 0x0018, ~0x0000, ' ', 2, "not" },
+  { 0x0A00, ~0x003F, ' ', 2, "not %m" },
+  { 0x0019, ~0x0000, ' ', 2, "neg" },
+  { 0x0A40, ~0x003F, ' ', 2, "neg %m" },
+
+  { 0x0E00, ~0x001F, ' ', 2, "set0 %in, %n" },
+  { 0x0300, ~0x00FE, ' ', 2, "set0 %mn, %n" },
+  { 0x0F00, ~0x001F, ' ', 2, "set1 %in, %n" },
+  { 0x0301, ~0x00FE, ' ', 2, "set1 %mn, %n" },
+  { 0x0C00, ~0x001F, ' ', 2, "t0sn %in, %n" },
+  { 0x0200, ~0x00FE, ' ', 2, "t0sn %mn, %n" },
+  { 0x0D00, ~0x001F, ' ', 2, "t1sn %in, %n" },
+  { 0x0201, ~0x00FE, ' ', 2, "t1sn %mn, %n" },
+
+  { 0x1200, ~0x00FF, ' ', 2, "ceqsn %k" },
+  { 0x0B80, ~0x003F, ' ', 2, "ceqsn %m" },
+  { 0x1300, ~0x00FF, ' ', 2, "cneqsn %k" },
+  { 0x0BC0, ~0x003F, ' ', 2, "cneqsn %m" },
+
+  { 0x0012, ~0x0000, ' ', 2, "izsn" },
+  { 0x0880, ~0x003F, ' ', 2, "izsn %m" },
+  { 0x0013, ~0x0000, ' ', 2, "dzsn" },
+  { 0x08C0, ~0x003F, ' ', 2, "dzsn %m" },
+
+  { 0x1C00, ~0x03FF, ' ', 2, "call %k" },
+  { 0x1800, ~0x03FF, ' ', 2, "goto %k" },
+
+  { 0x001E, ~0x0000, ' ', 2, "swap" },
+  { 0x0017, ~0x0000, ' ', 2, "pcadd" },
+  { 0x0038, ~0x0000, ' ', 2, "engint" },
+  { 0x0039, ~0x0000, ' ', 2, "disint" },
+  { 0x0036, ~0x0000, ' ', 2, "stopsys" },
+  { 0x0037, ~0x0000, ' ', 2, "stopexe" },
+  { 0x0035, ~0x0000, ' ', 2, "reset" },
+  { 0x0030, ~0x0000, ' ', 2, "wdreset" },
+  { 0x0006, ~0x0000, ' ', 2, "ldsptl" },
+  { 0x0007, ~0x0000, ' ', 2, "ldspth" },
+  { 0x003C, ~0x0000, ' ', 2, "mul" },
+
+  { 0xFF00, ~0x0000, ' ', 2, "putchar" },
+ 
+  { 0, 0, 0, 0, NULL }
+};
+
 struct dis_entry disass_pdk_14[]= {
   { 0x0000, ~0x0000, ' ', 2, "nop" },
   { 0x007A, ~0x0000, ' ', 2, "ret" },
@@ -79,7 +179,7 @@ struct dis_entry disass_pdk_14[]= {
   { 0x1200, ~0x007F, ' ', 2, "inc %m" },
   { 0x1280, ~0x007F, ' ', 2, "dec %m" },
   { 0x1300, ~0x007F, ' ', 2, "clear %m" },
-  { 0x006a, ~0x0000, ' ', 2, "sr" },
+  { 0x006A, ~0x0000, ' ', 2, "sr" },
   { 0x1500, ~0x007F, ' ', 2, "sr %m" },
   { 0x006B, ~0x0000, ' ', 2, "sl" },
   { 0x1580, ~0x007F, ' ', 2, "sl %m" },
@@ -99,9 +199,9 @@ struct dis_entry disass_pdk_14[]= {
   { 0x0F00, ~0x007F, ' ', 2, "xor a, %m" },
   { 0x00C0, ~0x003F, ' ', 2, "xor %i, a" },
 
-  { 0x0068, ~0x00FF, ' ', 2, "not" },
+  { 0x0068, ~0x0000, ' ', 2, "not" },
   { 0x1400, ~0x007F, ' ', 2, "not %m" },
-  { 0x0069, ~0x00FF, ' ', 2, "neg" },
+  { 0x0069, ~0x0000, ' ', 2, "neg" },
   { 0x1480, ~0x007F, ' ', 2, "neg %m" },
 
   { 0x1C00, ~0x01FF, ' ', 2, "set0 %in, %n" },
@@ -185,7 +285,7 @@ struct dis_entry disass_pdk_15[]= {
   { 0x2400, ~0x00FF, ' ', 2, "inc %m" },
   { 0x2500, ~0x00FF, ' ', 2, "dec %m" },
   { 0x2600, ~0x00FF, ' ', 2, "clear %m" },
-  { 0x006a, ~0x0000, ' ', 2, "sr" },
+  { 0x006A, ~0x0000, ' ', 2, "sr" },
   { 0x2A00, ~0x00FF, ' ', 2, "sr %m" },
   { 0x006B, ~0x0000, ' ', 2, "sl" },
   { 0x2B00, ~0x00FF, ' ', 2, "sl %m" },
@@ -205,9 +305,9 @@ struct dis_entry disass_pdk_15[]= {
   { 0x1E00, ~0x00FF, ' ', 2, "xor a, %m" },
   { 0x0080, ~0x007F, ' ', 2, "xor %i, a" },
 
-  { 0x0068, ~0x00FF, ' ', 2, "not" },
+  { 0x0068, ~0x0000, ' ', 2, "not" },
   { 0x2800, ~0x00FF, ' ', 2, "not %m" },
-  { 0x0069, ~0x00FF, ' ', 2, "neg" },
+  { 0x0069, ~0x0000, ' ', 2, "neg" },
   { 0x2900, ~0x00FF, ' ', 2, "neg %m" },
 
   { 0x3800, ~0x03FF, ' ', 2, "set0 %in, %n" },
