@@ -31,7 +31,7 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA
 #include "stypes.h"
 
 
-/*extern struct dis_entry disass_pdk_13[];*/
+extern struct dis_entry disass_pdk_13[];
 
 extern struct dis_entry disass_pdk_14[];
 
